Added ProductService Swagger documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/productdb
 spring.datasource.username=postgres
 spring.datasource.password=Tribalchief14.
 #spring.jpa.hibernate.ddl-auto=update
-
+management.endpoints.web.exposure.include=*
 spring.jpa.show-sql=true
