--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=springmvc
 server.port=8089
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/productdb
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/productdb
 spring.datasource.username=postgres
 spring.datasource.password=Tribalchief14.
 #spring.jpa.hibernate.ddl-auto=update
